# gmf-annotation-platform

./: LICENSE  README.md  pyproject.toml  schema.dbml
app/: main.py
docs/: endpoints.md  schema.md
